syntax = "proto3";

package sonm;

import "bigint.proto";
import "timestamp.proto";

// Deprecated: migrate to DWH API
enum DealStatus {
    ANY_STATUS = 0;
    PENDING = 1;
    ACCEPTED = 2;
    CLOSED = 3;
}

// Deprecated: migrate to DWH API
message DealDeprecated {
    string BuyerID = 1;
    string SupplierID = 2;
    DealStatus status = 3;
    BigInt price = 4;
    Timestamp startTime = 5;
    Timestamp endTime = 6;

    string SpecificationHash = 7;
    uint64 workTime = 8;
    string id = 9;
}
